# chrome-dinosaur-2d

./: .gitignore  Animation.h  BackgroundComponent.h  BackgroundSprite.cpp  CMakeLists.txt  CelestialComponent.h  ColliderComponent.h  Collision.cpp  Collision.h  DerivedSprites.h  Dino.vcxproj  Dino.vcxproj.filters  Dino2D.sln  Dino2D.vcxproj  Dino2D.vcxproj.filters  DinoSprite.cpp  DinoStates.h  DirtManager.cpp  DirtManager.h  Font.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GroundComponent.h  HighScore.cpp  HighScore.h  KeyboardController.h  Macros.h  Main.cpp  Map.cpp  Map.h  ObjectHandler.h  ObstacleHandler.cpp  ObstacleHandler.h  ObstacleManager.cpp  ObstacleManager.h  ObstacleSprite.cpp  README.md  Score.cpp  (+17 more)
Assets/sprites/: ObstacleSheet.pyxel  ground - Copy.pyxel
Assets/textures/: Dino.pyxel  background.pyxel
Background/: BackgroundSprite.cpp  DirtManager.cpp
Core/: KeyboardController.h  Score.cpp
Dino/: DinoSprite.cpp  DinoStates.h
ECS/: BackgroundComponent.h  CelestialComponent.h  ColliderComponent.h  Collision.h  Components.h  DinoComponent.h  EntityComponentSystem.cpp  EntityComponentSystem.h  KeyboardController.h  PositionComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
Entities/Sources/: BackgroundSprite.cpp
Graphics/: Sprites.h
Managers/Includes/: DirtManager.h  Score.h  SoundManager.h
Managers/Sources/: ObstacleManager.cpp  Score.cpp  Text.cpp
Obstacle/: ObstacleManager.cpp  ObstacleManager.h  ObstacleSprite.cpp
SDL2/cmake/: sdl2-config.cmake
SDL2_image/cmake/: sdl2_image-config.cmake
SDL2_mixer/cmake/: sdl2_mixer-config.cmake
SDL2_ttf/cmake/: sdl2_ttf-config.cmake
Sound/: SoundManager.cpp
Text/: Text.cpp
assets/: Dino.pyxel  ObstacleSheet.pyxel  ground.pyxel
assets/fonts/: Terms of Use End User Lisence Agreement.txt
assets/lvl1/: Dino.pyxel  ObstacleSheet.pyxel  background.pyxel  background.tps  moon.pyxel
assets/sprites/: Dino.pyxel  ObstacleSheet.pyxel  Test (2).pyxel  background.pyxel  moon.pyxel
